fixed chart infobar on mobile

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -242,11 +242,3 @@ label{
 .hidden{
 	display:none;
 }
-
-@media(max-width: 425px){
-
-	.info{
-		margin-right:0px;
-		margin-left:125px;
-	}
-}
